<resources>
    <string name="app_name">My Application</string>
    <string name="user_name">User Name</string>
    <string name="Login">Log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="log_in">Log in !</string>
    <string name="already_i_have_one">already i have one.</string>
    <string name="sign_up">Sign up</string>
    <string name="the_password_should_be_at_least_8_charactrs">The password should be at least 8 charactrs</string>

    <string name="personal_id">Personal ID</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
</resources>
